--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
