--- a/package.json
+++ b/package.json
@@ -25,11 +25,18 @@
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
+    "@types/react": "^17.0.30",
+    "@types/react-alert": "^5.2.1",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/uuid": "^8.3.1",
     "axios": "^0.21.4",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
